Update app School Bus :rocket:

--- a/app/src/components/Header/styles.css
+++ b/app/src/components/Header/styles.css
@@ -1,7 +1,7 @@
 header#main-header {
     width: 100%;
-    height: 60px;
-    background: #da552f;
+    height: 80px;
+    background: #40d486;
     font-size: 18px;
     font-weight: bold;
     color: #fff;
